[package]
name = "antc"
version = "0.1.0"
edition = "2024"

[lib]
name = "ant_cranelift_compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
ant_id = { path = "../TypedAnt/id", package = "id" }
ant_typed_ast = { path = "../TypedAnt/typed_ast", package = "typed_ast" }
ant_typed_module = { path = "../TypedAnt/typed_module", package = "typed_module" }
ant_ty = { path = "../TypedAnt/ty", package = "ty" }
ant_crate_def = { path = "../TypedAnt/ant_crate_def", package = "ant_crate_def" }
ant_name_resolver = { path = "../TypedAnt/name_resolver", package = "name_resolver" }
ant_type_checker = { path = "../TypedAnt/type_checker", package = "type_checker" }
ant_ast = { path = "../TypedAnt/ast", package = "ast" }
ant_parser = { path = "../TypedAnt/parser", package = "parser" }
ant_lexer = { path = "../TypedAnt/lexer", package = "lexer" }
ant_token = { path = "../TypedAnt/token", package = "token" }

# Cranelift dependencies for object file generation
cranelift = "0.110.0"
cranelift-module = "0.110.0"
cranelift-native = "0.110.0"
cranelift-codegen = "0.110.0"
cranelift-frontend = "0.110.0"
cranelift-object = "0.110.0"
cc = "1.2.41"
tempfile = "3.23.0"

clap = { version = "4.5.47", features = ["derive"] }
once_cell = "1.21.3"
indexmap = "2.13.0"
bigdecimal = "0.4.10"

[features]
debug = []
